welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: not found: value ecrireMessage
    ecrireMessage(cases)
    ^Diagonal:11: error: not found: value ecrireMessage
      ecrireMessage(cases)
      ^Diagonal:16: error: not found: value ecrireMessage
    ecrireMessage(cases)
    ^Diagonal:20: error: not found: value ecrireMessage
      ecrireMessage(cases)
      ^